      hdate_get_utc_sun_time_full - gets the time of first light,
      talit, sunris, sunset, first stars and three stars.
      hdate_get_utc_sun_time_deg - gets the time the sun is on
      some known altitude.
  * Add Times of day to hdate command line tool.
     supported times: first-light, talit, sunrise, mid-day, sunset, first-stars
     and three-stars
  * Add new oprions in hdate command line tool to it's man page
	
  -- Yaacov Zamir <kzamir@wall.co.il>  Tue, 8 Jun 2006 12:13
  
libhdate (1.4.7)

  * Fix pesach II in hebrew po file.
  * hcal utility export strict html 4.01.
  * hcal utility can export diaspora holidays
  * Update hcal utility man file.

  -- Yaacov Zamir <kzamir@wall.co.il>  Tue, 18 Apr 2006 12:13

libhdate (1.4.3)

  * Fix header of spanish po file.
  * Daniel Nylander: Swedish translation.

  -- Yaacov Zamir <kzamir@wall.co.il>  Mon, 10 Apr 2006 12:13
  
libhdate (1.4.2)

  * Ido Kanner <idokan@gmail.com> - Update free pascal bindings.
  * Update address of Free Software Foundation in COPYING file.
  * make the spec.in file more configurable.

  -- Yaacov Zamir <kzamir@wall.co.il>  Fri, 25 Nov 2005 12:13
  
libhdate (1.4.0)

  * Michael Kaminsky - libhdate now reports the 2nd day of yom
    tov on Sukkot and Peseach as Yom Tov and not Chol Hamoed.
  * Cange C++ API - insert the location and diaspora flag as
    part of the hdate object.
  * Docomentation - separate the c and the cpp docs, more readable.
  * hdate example can now export iCal formated output.

  -- Yaacov Zamir <kzamir@wall.co.il>  Mon, 8 Aug 2005 22:13
  
libhdate (1.3.1)

  * Add "const correctness" patch from Markus Elfring (elfring).
  * Manual page seems to contain a hyphen where a minus sign was 
intended, patch by Lior Kaplan.
  * Remove the debian directory from the ziped package.

    -- Yaacov Zamir <kzamir@wall.co.il>  Sat, 30 Jul 2005 22:13

libhdate (1.3.0)

  * Add examples to the doc directory